# mancala-solver

./: CMakeLists.txt  LICENSE  main.cpp
include/mancala-solver/: board_state.h  game_mechanics.h  solver.h
src/: game_mechanics.cpp
